# protocols-reverse

./: .env.example  .gitignore  How-To-Crafting-Effective-Agents.md  README.md  pyproject.toml  report.md
app/: main.py
datasets/: README.md
datasets/common/text/: grpc_web_bulk__grpc_web.pcapng  http_tls_challenge_stream__challenge01_ooo_stream.pcapng
datasets/manifests/: dataset_index.csv  dataset_index.json
datasets/uncommon/text/: netperfmeter_flow__netperfmeter.pcapng
docs/: system-call-graph.md  tools-call.md  未知网络协议逆向系统.md  项目结构简介.md
examples/: README.md  flow_input.json  test_import_http.pcap
knowledge/: user_preference.txt
scripts/: prepare_datasets.py  setup_nemesys_env.sh
src/testcrewai/: crew.py  main.py  models.py
src/testcrewai/adapters/: __init__.py  binaryinferno_cli.py  common.py  nemesys_cli.py  netplier_cli.py  netplier_official_runner.py  netzob_cli.py
src/testcrewai/config/: agents.yaml  tasks.yaml
src/testcrewai/pipeline/: __init__.py  fusion.py  preprocess.py  report.py  segmentation.py  semantics.py  tool_selection.py
src/testcrewai/tools/: __init__.py  custom_tool.py  protocol_tools.py  shell_runner.py
src/testcrewai/utils/: io.py  logging.py
tests/: test_cli_smoke.py  test_fusion.py  test_nemesys_adapter.py  test_netzob_adapter_helpers.py  test_official_adapter_helpers.py  test_preprocess_capture_format.py  test_preprocess_payload_extraction.py  test_preprocess_protocol_detection.py  test_segmentation_strategy.py  test_semantic_strategy.py  test_shell_runner.py  test_tool_selection.py
(+2 files in other folders)
