[project]
name = "testcrewai"
version = "0.1.0"
description = "testCrewAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.11.0",
    "scapy>=2.7.0",
]

[project.scripts]
testcrewai = "testcrewai.main:run"
protocol_reverse = "testcrewai.main:run"
run_crew = "testcrewai.main:run"
train = "testcrewai.main:train"
replay = "testcrewai.main:replay"
test = "testcrewai.main:test"
run_with_trigger = "testcrewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
